favicon and fixed icon on small devices

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
   margin: 5px;
   width: 16px;
   height: 16px;
+  background-repeat: no-repeat;
 }
 
 .icon.email {
